--- a/app/src/main/res/layout/activity_new_user_screen.xml
+++ b/app/src/main/res/layout/activity_new_user_screen.xml
@@ -21,18 +21,19 @@
 
     <EditText
         android:id="@+id/txtUsername"
+        android:backgroundTint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:textColorHint="#546E7A"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
-        android:backgroundTint="@color/lightGrey"
         android:fontFamily="@font/prompt"
         android:ems="10"
         android:hint="Enter Username"
         android:inputType="textPersonName"
         android:minHeight="48dp"
         android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textColorHint="@color/lightGrey"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,6 +46,9 @@
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Enter Password"
+        android:backgroundTint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:textColorHint="#546E7A"
         android:inputType="textPassword"
         android:minHeight="48dp"
         android:fontFamily="@font/prompt"
@@ -60,10 +64,14 @@
         android:layout_height="51dp"
         android:layout_marginTop="48dp"
         android:ems="10"
+        android:textAlignment="center"
         android:hint="Height"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/Weight"
         app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:textColorHint="#546E7A"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPassword"
         android:fontFamily="@font/prompt"
@@ -80,6 +88,9 @@
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/btnCreateUser"
         app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:textColorHint="#546E7A"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtPassword"
         android:fontFamily="@font/prompt"/>
@@ -91,6 +102,9 @@
         android:textAlignment="center"
         android:layout_marginBottom="72dp"
         app:layout_constraintBottom_toTopOf="@+id/btnCreateUser"
+        android:backgroundTint="@color/lightGrey"
+        android:textColor="@color/black"
+        android:textColorHint="#546E7A"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
