--- a/app/src/main/res/layout/activity_collection_disc_rack.xml
+++ b/app/src/main/res/layout/activity_collection_disc_rack.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/bookshelf">
+    android:layout_height="match_parent">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/topbarDR"
@@ -66,7 +65,7 @@
         android:layout_width="177dp"
         android:layout_height="170dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:onClick="showDiscDescription"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -99,7 +98,7 @@
         android:layout_width="177dp"
         android:layout_height="170dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="100dp"
         android:onClick="showDiscDescription"
         app:layout_constraintStart_toEndOf="@+id/D01"
         app:layout_constraintTop_toTopOf="parent"
@@ -110,8 +109,7 @@
         android:layout_width="303dp"
         android:layout_height="71dp"
         android:layout_marginBottom="68dp"
-        android:background="@android:drawable/bottom_bar"
-        android:backgroundTint="@color/lightBlue"
+        android:background="@color/lightBlue"
         android:text="Description  here..."
         android:textColor="@color/white"
         android:textSize="16sp"
