--- a/app/src/main/res/layout/activity_collection_sticker_wall.xml
+++ b/app/src/main/res/layout/activity_collection_sticker_wall.xml
@@ -283,16 +283,17 @@
 
     <TextView
         android:id="@+id/DescriptionText1"
-        android:layout_width="356dp"
+        android:layout_width="331dp"
         android:layout_height="77dp"
         android:layout_marginBottom="48dp"
+        android:background="@color/lightBlue"
         android:text="Description Here..."
+        android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/A42"
-        app:layout_constraintVertical_bias="0.859" />
+        app:layout_constraintVertical_bias="0.614" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
