--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -10,13 +10,13 @@
     <ImageView
         android:id="@+id/settingsIconClickable"
         android:layout_width="57dp"
-        android:layout_height="52dp"
+        android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="60dp"
         android:clickable="true"
         android:onClick="goToSettings"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/settings_icon" />
@@ -55,15 +55,17 @@
 
     <TextView
         android:id="@+id/xpBar"
-        android:layout_width="117dp"
+        android:layout_width="0dp"
         android:layout_height="36dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="104dp"
+        android:layout_marginEnd="122dp"
         android:background="@android:drawable/editbox_background"
         android:backgroundTint="@color/lightBlue"
         android:text="0 / 0 | Level: 1"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toStartOf="@+id/button4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="0 / 0" />
@@ -78,5 +80,18 @@
         android:text="Collection"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="62dp"
+        android:layout_marginBottom="555dp"
+        android:onClick="playSound"
+        android:text="Quack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/xpBar"
+        app:layout_constraintTop_toBottomOf="@+id/settingsIconClickable" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
