--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -68,15 +68,17 @@
         tools:text="0 / 0" />
 
     <Button
-        android:id="@+id/button8"
-        android:layout_width="144dp"
-        android:layout_height="49dp"
-        android:layout_marginTop="144dp"
-        android:layout_marginEnd="248dp"
-        android:onClick="goToCollectionScreen"
-        android:text="Collection"
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="goToRivalScreen"
+        android:text="Rival"
+        app:layout_constraintBottom_toTopOf="@+id/button4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/xpBar"
+        app:layout_constraintVertical_bias="0.477" />
 
     <Button
         android:id="@+id/button4"
@@ -84,9 +86,11 @@
         android:layout_height="wrap_content"
         android:onClick="playSound"
         android:text="QUACK"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/button3"
+        app:layout_constraintVertical_bias="0.551" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
